syntax = "proto3";

option go_package = "paoqi/game-backend/pprotos";

package paoqi.player;

service Player {
  rpc GetName (GetNameRequest) returns (GetNameReply) {}
  rpc SetName (SetNameRequest) returns (SetNameReply) {}
}

message GetNameRequest {
  string playerID = 1;
}

message GetNameReply {
  int32 statusCode = 1;
  string name = 2;
}

message SetNameRequest {
  string playerID = 1;
  string name = 2;
}

message SetNameReply {
  int32 statusCode = 1;
}
